# Chitose

./: .env.example  .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  check_setup.py  index.html  main.py  pyproject.toml  server.py  test_deepgram.py  test_tts.py
.claude/: CLAUDE.md
chitose/: __init__.py  agent.py  config.py  utils.py
chitose/danmaku/: __init__.py  bridge.py  filter.py  sampler.py
config/: default.yaml
docs/: ARCHITECTURE.md  DEV_LOG.md  DOCUMENTATION_INDEX.md  LIP_SYNC_GUIDE.md  PROJECT_SUMMARY_EN.md  PROJECT_UNDERSTANDING.md  QUICK_REFERENCE.md  TECHNICAL_REVIEW.md  TODO.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
docs/research/: product-analysis.md
docs/research/competitive-analysis/: 01_landscape.md  02_luna_ai.md  03_open_llm_vtuber.md  04_comparison.md  05_roadmap.md  README.md
docs/research/openclaw/: 01_architecture.md  02_storage_and_indexing.md  03_search_and_retrieval.md  04_session_memory.md  05_embedding_provider.md  README.md
models/芊芊/: baohuli.exp3.json  bijiben2.exp3.json  bixin.exp3.json  changfa.exp3.json  chuier.exp3.json  dayouxi.exp3.json  duzui.exp3.json  huatong.exp3.json  huli.exp3.json  items_pinned_to_model.json  jingzi.exp3.json  shanzi.exp3.json  芊芊.cdi3.json  芊芊.model3.json  芊芊.physics3.json  芊芊.vtube.json  问号.exp3.json
web/: README.md  app.js  index.html  livekit-integration.js
